crates/toml/tests/snapshots/invalid/ext/integer/overflow-neg.stderr
TOML parse error at line 1, column 5
  |
1 | a = -9223372036854775809
  |     ^^^^^^^^^^^^^^^^^^^^
integer number overflowed
